@startuml
'https://plantuml.com/class-diagram

hide empty members

class Board

class Position{
index: Int
}

enum Player{
 X, O
}



Board --> "*" Cell : boardCells
Cell -->Position: key
Cell --> Player: value

Board <|-- BoardRun
Board <|-- BoardWin
Board <|-- BoardDraw

BoardWin --> Player
BoardRun --> Player


@enduml